# instant-compiler

./: Makefile  README.md  instant-compiler.cabal
app/: Main.hs
llvm/: Main.hs
src/: LLVM.hs  Parser.hs  Runner.hs  Types.hs
test/: ParserSpec.hs
