cabal-version:      2.4
name:               instant-compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Wiktor Czyż
maintainer:         czyz.wiktor@gmail.com

-- A copyright notice.
-- copyright:
-- category:

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

test-suite instant-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
      ParserSpec
  build-depends:
      base
    , hspec
    , hspec-discover
    , hspec-megaparsec
    , megaparsec
    , text
    , instant-compiler

  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover

library
  import: common-settings
  hs-source-dirs: src
  build-depends: 
      base
    , megaparsec
    , parser-combinators
    , text
    , mtl
    , containers
  exposed-modules:
    Types
    Parser
    LLVM
    Runner

executable instant-compiler
  import: common-settings
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends: 
      base
    , megaparsec
    , instant-compiler
    , text
  hs-source-dirs: llvm
